--- a/app/src/main/res/layout/fragment_copy.xml
+++ b/app/src/main/res/layout/fragment_copy.xml
@@ -5,7 +5,8 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     android:orientation="vertical"
-    tools:context="app.android.com.materialfilemanager.MainFragment">
+    tools:context="app.android.com.materialfilemanager.MainFragment"
+    android:background="@android:color/white" >
 
     <TextView
         android:layout_width="wrap_content"
