--- a/app/src/main/res/layout/fragment_long_click.xml
+++ b/app/src/main/res/layout/fragment_long_click.xml
@@ -12,7 +12,7 @@
         android:layout_gravity="top|left"
         android:layout_marginLeft="15dp"
         android:layout_marginTop="15dp"
-        android:background="@color/colorPrimaryLight"
+        android:background="@android:color/transparent"
         android:text="@string/delete_button" />
 
     <Button
@@ -24,7 +24,7 @@
         android:layout_marginRight="15dp"
         android:layout_marginTop="15dp"
         android:layout_toRightOf="@id/deleteButton"
-        android:background="@color/colorPrimaryLight"
+        android:background="@android:color/transparent"
         android:text="@string/move_button" />
 
     <Button
@@ -35,7 +35,7 @@
         android:layout_gravity="center"
         android:layout_marginLeft="15dp"
         android:layout_marginTop="15dp"
-        android:background="@color/colorPrimaryLight"
+        android:background="@android:color/transparent"
         android:text="@string/copy_button" />
 
     <Button
@@ -44,9 +44,33 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/moveButton"
         android:layout_gravity="center"
-        android:layout_margin="15dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
         android:layout_toRightOf="@id/copyButton"
-        android:background="@color/colorPrimaryLight"
+        android:background="@android:color/transparent"
         android:text="@string/rename_button" />
+    <Button
+        android:id="@+id/zipButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/copyButton"
+        android:layout_gravity="center"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="15dp"
+        android:background="@android:color/transparent"
+        android:text="@string/zip_button" />
+    <Button
+        android:id="@+id/unzipButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/renameButton"
+        android:layout_gravity="center"
+        android:layout_margin="15dp"
+        android:layout_marginBottom="15dp"
+        android:layout_toRightOf="@id/zipButton"
+        android:background="@android:color/transparent"
+        android:text="@string/unzip_button" />
 
 </RelativeLayout>
