--- a/app/src/main/res/layout/recycler_row.xml
+++ b/app/src/main/res/layout/recycler_row.xml
@@ -32,12 +32,33 @@
             android:layout_below="@id/text_view_name"
             android:layout_marginLeft="10dp" />
 
-        <TextView
+        <!--<TextView
             android:id="@+id/text_view_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:layout_below="@id/text_view_name" />
+            android:layout_above="@id/checkbox"/>-->
+        <TextView
+            android:id="@+id/text_view_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toLeftOf="@id/checkbox"
+            android:layout_below="@id/text_view_name"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="9dp"/>
+
+
+        <android.support.v7.widget.AppCompatCheckBox
+            android:id="@+id/checkbox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_below="@id/text_view_name"
+
+
+
+
+            />
     </RelativeLayout>
 
 </LinearLayout>
